docs(README.md): Update readme